# nebula

./: .gitmodules  README.md  TODO.md  meson.build
src/: Compositor.cpp  Compositor.h  ConfigManager.hpp  LayoutManager.cpp  LayoutManager.hpp  Nebula.cpp  Nebula.hpp  Output.cpp  Output.h  Surface.cpp  Surface.h  Workspace.cpp  Workspace.hpp  config.lua  ipc.cpp  ipc.hpp  main.c  main.cpp  sv.hpp  util.hpp
src/input/: Keyboard.cpp  Keyboard.h  Pointer.cpp  Pointer.h
src/roles/: ToplevelRole.cpp  ToplevelRole.h
src/scene/: SSD.cpp  SSD.h  SSDTouchable.h  SurfaceView.cpp  SurfaceView.h
src/sol/: forward.hpp  sol.hpp
src/utils/: Global.cpp  Global.h  Settings.h
